Updates endpoint basics
